Addition of Metadata and Partial Classes

--- a/PasswordKeeper/PasswordKeeper.Webapp/Views/Shared/_Layout.cshtml
+++ b/PasswordKeeper/PasswordKeeper.Webapp/Views/Shared/_Layout.cshtml
@@ -21,9 +21,9 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li><a href="@Url.Action("index","HostTypes")">Host Types</a></li>
+                    <li><a href="@Url.Action("index","CredentialTypes")">Credential Types</a></li>
+                    <li><a href="@Url.Action("index","Hosts")">Hosts</a></li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
